buildscript {
	repositories {
		mavenCentral()
	}
	dependencies {
		// Añade el plugin de Kotlin al classpath del build de Gradle
		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.1.21"
	}
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id("io.github.ximtech.jasypt-encrypt-plugin") version "1.4.1"
	id "com.diffplug.spotless" version "8.6.0"
	id("tech.mappie.plugin") version "2.1.21-1.3.0"
	id "org.sonarqube" version "7.3.1.8318"
	id 'jacoco' // Add JaCoCo plugin
}

group = 'com.moontech'
version = '0.0.1-SNAPSHOT'
description = "Archetype Java project for Spring Boot"

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(26)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	compileOnly 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation("org.springframework.boot:spring-boot-starter-web")
	implementation 'org.flywaydb:flyway-mysql'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
	implementation("com.github.ulisesbocchio:jasypt-spring-boot-starter:${project.properties["jasypt_version"] as String}")
	implementation("io.jsonwebtoken:jjwt-api:${project.properties["jwt_version"] as String}")
	implementation("tech.mappie:mappie-api-jvm:${project.properties["mappie_version"] as String}")
	implementation "org.mapstruct:mapstruct:${project.properties["map_struct"] as String}"
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "org.mapstruct:mapstruct-processor:${project.properties["map_struct"] as String}"
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly("io.jsonwebtoken:jjwt-impl:${project.properties["jwt_version"] as String}")
	runtimeOnly("io.jsonwebtoken:jjwt-jackson:${project.properties["jwt_version"] as String}")
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers-mysql'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform({})
	jvmArgs("--add-opens=java.base/java.time=ALL-UNNAMED", "--add-opens=java.base/java.time.zone=ALL-UNNAMED", "--enable-native-access=ALL-UNNAMED")
	finalizedBy jacocoTestReport // Ensure JaCoCo report is generated after tests
}

jacocoTestReport {
	reports {
		xml.required = true // SonarQube prefers XML reports
		html.required = true
	}
	// Exclude generated code or specific classes from coverage report if needed
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: [
					"**/ArchetypeApplication.class",
					"**/config/**",
					"**/model/**",
					"**/exception/**",
					"**/commons/**",
					"**/security/constant/**",
					"**/security/property/**",
					"**/domain/entity/**",
					"**/application/mapper/**"
			])
		}))
	}
}

tasks.encryptProperties {
	System.getenv("JASYPT_ENCRYPTOR_PASSWORD")
}

tasks.decryptProperties {
	System.getenv("JASYPT_ENCRYPTOR_PASSWORD")
}

spotless {
	java {
		// Aplica el formateador a todos los archivos Java del proyecto
		target 'src/*/java/**/*.java'

		googleJavaFormat() // Puedes especificar la versión

		// Buenas prácticas adicionales:
		removeUnusedImports() // Elimina imports que no se usan
		trimTrailingWhitespace() // Quita espacios al final de las líneas
		endWithNewline() // Asegura que el archivo termine con una línea nueva
	}
}